Graph the eq1 and eq2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'com.jjoe64:graphview:4.1.1'
     compile files('libs/mxparser_jdk1.7.jar')
+    compile 'com.google.code.gson:gson:2.3.1'
 }
