--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         <activity
             android:name=".Activites.GraphActivity"
             android:label="@string/title_activity_graph"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Activites.Graph2Activity">
+        </activity>
     </application>
 
 </manifest>
